fixing table line breaks

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -64,10 +64,14 @@
         </th>
       </tr>
       <tr class="border border-secondaryDark overflow-ellipsis">
-        <td class="w-1/2 p-2 text-center border border-secondaryDark break-all">
+        <td
+          class="w-1/2 p-2 text-center border border-secondaryDark break-words"
+        >
           {{ this.translationData.value.segment }}
         </td>
-        <td class="w-1/2 p-2 text-center border border-secondaryDark break-all">
+        <td
+          class="w-1/2 p-2 text-center border border-secondaryDark break-words"
+        >
           {{ this.translationData.value.translation }}
         </td>
       </tr>
